--- a/TTCNTT/TTCNTT/TTCNTT.csproj
+++ b/TTCNTT/TTCNTT/TTCNTT.csproj
@@ -355,7 +355,7 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
+    <Content Include="Views\Home\Intro.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\H_GiaoVien\Index.cshtml" />
