--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 TTCNTT/TTCNTT/bin/EntityFramework.SqlServer.xml
 
 TTCNTT/TTCNTT/bin/EntityFramework.xml
+/TTCNTT/packages
+/TTCNTT/TTCNTT/obj/Debug/build.force
+/TTCNTT/TTCNTT/obj
+/TTCNTT/TTCNTT/bin
