--- a/TTCNTT/TTCNTT/packages.config
+++ b/TTCNTT/TTCNTT/packages.config
@@ -2,7 +2,12 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="bootstrap" version="3.4.1" targetFramework="net472" />
+  <package id="Castle.Core" version="4.4.1" targetFramework="net472" />
+  <package id="Castle.Core.AsyncInterceptor" version="2.0.0" targetFramework="net472" />
+  <package id="Castle.LoggingFacility" version="5.1.1" targetFramework="net472" />
+  <package id="Castle.Windsor" version="5.1.1" targetFramework="net472" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
+  <package id="JetBrains.Annotations" version="2021.1.0" targetFramework="net472" />
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net472" />
@@ -10,11 +15,36 @@
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Caching.Abstractions" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Caching.Memory" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="5.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
+  <package id="Nito.AsyncEx.Context" version="5.1.0" targetFramework="net472" />
+  <package id="Nito.AsyncEx.Coordination" version="5.1.0" targetFramework="net472" />
+  <package id="Nito.AsyncEx.Tasks" version="5.1.0" targetFramework="net472" />
+  <package id="Nito.Collections.Deque" version="1.1.0" targetFramework="net472" />
+  <package id="Nito.Disposables" version="2.2.0" targetFramework="net472" />
   <package id="PagedList" version="1.17.0.0" targetFramework="net472" />
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Collections.Immutable" version="5.0.0" targetFramework="net472" />
+  <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net472" />
+  <package id="System.Data.Common" version="4.3.0" targetFramework="net472" />
+  <package id="System.Linq.Dynamic.Core" version="1.2.10" targetFramework="net472" />
+  <package id="System.Linq.Queryable" version="4.3.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net472" />
+  <package id="System.Runtime.Serialization.Formatters" version="4.3.0" targetFramework="net472" />
+  <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.AccessControl" version="5.0.0" targetFramework="net472" />
+  <package id="System.Security.Claims" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
